--- a/styles/cube.scss
+++ b/styles/cube.scss
@@ -13,7 +13,7 @@
 
 .swiper {
 	position: relative;
-	width: 300px;
+	width: 265px;
 	height: 380px;
 }
 
@@ -28,6 +28,7 @@
 .swiper-slide img {
 	width: 100%;
 	height: 100%;
+	object-fit: cover;
 }
 
 @media (max-width: 1050px) {
