--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -187,11 +187,12 @@ header .spotlight > div:nth-child(2) {
 	}
 }
 
-#particleCanvas {
+#particleCanvas,
+#footerBg {
 	position: absolute;
 	pointer-events: none;
 	animation: load 0.4s ease-in-out forwards;
-	z-index: -1;
+	z-index: 1;
 	width: 100%;
 }
 
